# riscVEmulatorTactModel

./: .gitignore  README.md
libelf/: 1.txt  loop.c  loop.dump  loop.i  loop.s  parser  parser.c  ptload.txt  queen.c  queen.dump  queen.i  queen.s  queen8.dump  test.dump  test.i  test.s
riscVClionProject/: CMakeLists.txt  DecodePhase.cpp  DecodePhase.h  Emulator.cpp  Emulator.h  ExecutePhase.cpp  ExecutePhase.h  FetchPhase.cpp  FetchPhase.h  Instructions.cpp  Instructions.h  Memory.cpp  Memory.h  MemoryPhase.cpp  MemoryPhase.h  PCSelect.cpp  PCSelect.h  Phase.h  PipelineStructure.h  WriteBackPhase.cpp  WriteBackPhase.h  main.cpp
